Turn verbose off for jest tests
The many tests were generating an output that was too big for
the screen.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immutable": "^3.8.1"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "verbose": false
   }
 }
