--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "true-store",
   "version": "0.1.5",
   "description": "Simple state management for javascript applications",
+  "license": "MIT",
+  "author": {
+    "name": "Hugo Mota",
+    "url": "https://github.com/hugollm"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/hugollm/true-store.git"
+  },
   "main": "src/true-store.js",
   "scripts": {
     "test": "jest",
     "watch-tests": "jest --watchAll"
   },
-  "author": "Hugo Mota",
-  "license": "MIT",
   "dependencies": {
     "immutable": "^3.8.2"
   },
