--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "type": "git",
         "url": "git://github.com/hugollm/true-store.git"
     },
-    "main": "src/true-store.js",
+    "main": "src/store.js",
     "scripts": {
         "test": "jest --coverage",
         "watch-tests": "jest --coverage --watchAll",
